move across obsidian content

--- a/content/20221009 Lidar+imu.md
+++ b/content/20221009 Lidar+imu.md
@@ -1,5 +1,5 @@
 # Idea
-As mentioned [[20220923 blindar prototype notes|before]] because the lidar does not have any notion its pose it makes it difficult to detect the difference between:
+As mentioned [[20220923 blindar prototype notes|before]] because the lidar does not have any notion of pose it makes it difficult to detect the difference between:
  - A spike in distance that is due to the lidar scanning over an obstacle (side view):
 
 ![[Pasted image 20221010184137.png]]
