--- a/content/20221103 915MHz brrr.md
+++ b/content/20221103 915MHz brrr.md
@@ -24,3 +24,37 @@ If we zoom in on the time series we can see the modulation of channel 3:
 I don't know what the deal is with the three spikes in the frequency domain. This is outside the proper operating region of the scope so it might just be a measurement thing but if not this is something to worry about I think.
 
 This all looks fairly reasonable, now the question is if it can be downconverted back to the original signal. 
+
+## Handy graph for what things go where
+![[Pasted image 20221112113028.png]]
+From [here](https://www.markimicrowave.com/assets/appnotes/mixer_basics_primer.pdf).
+### Pinout that infineon was too lazy to make
+![[Pasted image 20221112115657.png]]
+BFP420H
+
+## Oscillator 2
+I made this one out of an old FM V2 PCB because it still had the footprint for the ADE-2ASK+ mixer on it. Here are the two outputs side by side with the same varactor voltage:
+![[Pasted image 20221112143528.png]]
+Why  is the second oscillator so much lower than the first? Well because it _isn't actually wired up to the output of the oscillator_:
+![[Pasted image 20221112143729.png]]
+And it still gets that much signal!
+Actually wiring it up and making sure that I am measuring the same thing for both oscillators doesn't actually seem to change anything. In addition to this the amplitude falls off super fast with increasing frequency so by the time I am tuned up to the range of the first oscillator the amplitude is very low. It does form a spontaneous PLL though, which is cool:
+![[Pasted image 20221112151241.png]]
+I don't know why this amplitude fallin off thing is happening. I checked the DC levels everywhere and didn't find   anything. I double checked and replaced the feedback capacitors  and they are fine. 
+Interestingly probing the emitter of the transistor with a multimeter lead has very different results. For the well behaved circut the results look like thiss:
+![[Pasted image 20221112152544.png]]
+I interpret this to mean that the impedance the emitter sees to ground kind of moves around with frequency because the multimeter lead is a transmission line or whatever. This effect disappears when I touch ground with my other hand btw.
+... This whole thing turned out to be the AC coupling capacitor coming out of the oscillator being desoldered on one end :shrug:.
+## Mixing again
+Putting a 10KHz square wave into the 10MHz VCO which then gets upconverted in the 750 MHz VCO like so:
+![[Pasted image 20221113184227.png]]
+I tuned the high frequency to be at 750MHz rather than 915MHz cause that was what was easy to do at the time.
+This results in the following spectrum:
+![[Pasted image 20221113184544.png]]
+Looks pretty reasonable to me, now  to take that output and put it into the next mixer to downconvert it. This is the part that should theoretically cross the air gap to the headphones.
+## Results of downconversion:
+Unforturnately it looks like if I put the two LO's at the same 750MHz frequency they just phase lock:
+![[Pasted image 20221113185338.png]]
+...That's not what I want. Right?
+I think the next version of my board should include a usb connector to make it easier to power the things separately, and a long way away from the bench.
+I think I will adjourn here and make that pcb. Parasitics and whatnot are bound to be important so I  may as well order it now.
