move across obsidian content

--- a/content/20230715 BetaPut.md
+++ b/content/20230715 BetaPut.md
@@ -34,4 +34,48 @@ It seems that in a SMILES string hydrogens are optional. The string `n1nccnc1N` 
 For example, which is also `C3 H4 N4`. I guess since it still has all the information then that's fine and any neural net will just learn about explicit hydrogens. The xyz position for this particular example contains 11 entries to the hydrogens are present in the output.
 
 ## Bond distances
+Since the goal here will probably be to generate a distance matrix, exploring the variablility of how close atoms are to other atoms seems like a good idea. Here is a table for all "organic" compounds with >2 atoms showing the closes atom to each other atom:
 ![[Pasted image 20230720085302.png]]
+Looks pretty interesting, the nice few-mode distributions all over the place are I presume indicative of double and single bonds and whatnot. There are also a few supposedly impossible things like the H-H bond. The H-C plot doesn't looks very interesting above but looks like this when you zoom in:
+![[Pasted image 20230722093838.png]]
+which is pretty cool. X axis is anstroms.
+### H-H molecule
+As an exercise into investigating anomalies, let's look at those molecules where the closest atom to a hydrogen was another hydrogen.
+[Here](https://www.crystallography.net/cod/1503863.html) is one example of such a compound:
+![[Pasted image 20230722094318.png]]
+and [another](https://www.crystallography.net/cod/2232246.html):
+![[Pasted image 20230722094347.png]]
+and [another](https://www.crystallography.net/cod/4109267.html):
+![[Pasted image 20230722094503.png]]
+[One final](https://www.crystallography.net/cod/2232246.html) one which juuust might be a real compound:
+![[Pasted image 20230722100858.png]]
+## O-O bonds
+Unlike the H-H case, O-O bonds can be legit from peroxides or whatever. But most of the cases in this dataset seem to be garbage, [e.g.](https://www.crystallography.net/cod/7055813.html):
+![[Pasted image 20230722102707.png]]
+Looks like a nitrite group was duplicated or something there. [This](https://www.crystallography.net/cod/7112739.html) one here looks like it might be a nitrate (NO3-):
+![[Pasted image 20230722102837.png]]
+Until you look at a real nitrate and realise that's [not how they be](https://en.wikipedia.org/wiki/Nitroglycerin#/media/File:Nitrogylcerin_(3D_ball-and-stick_model).png):
+![[Pasted image 20230722102914.png]]
+.
+
+## What to do.
+These errors in the crystallography database are particularly obvious because they are clearly physically impossible. But if there is a high incidence of errors like this then of course that means that errors that are harder to spot are even more prevalent than this, and so this whole database is rather questionable
+
+# Possible reasons for discrepancies.
+Here is a chemical that you would think is totally impossible to screw up: butane:
+https://www.crystallography.net/cod/1511809.html
+and yet it only shows two carbon atoms in the unit cell. I asked chatGPT about it and it had this to say:
+https://chat.openai.com/share/994735bd-a1eb-4720-a8ea-f77297bc00f8
+so it looks like the CIF file format can show just a subset of the molecule and then apply various symmetry operations to define the full molecule. How frustrating.
+Both openbabel and gemmi do not take this symmetry into account and apply it to get the full molecule out. the CIF file specifies the symmetries that need to be applied to this sub-molecule to obtain the unit cell of the crystal:
+```
+_symmetry_equiv_pos_as_xyz
+'x, y, z'
+'-x, y+1/2, -z+1/2'
+'-x, -y, -z'
+'x, -y-1/2, z-1/2'
+```
+but wait, to get the whole molecule we need to apply only one symmetry but there are 4 applied here! That's because the unit cell of butane ice apparently is made up of two butane molecules. So which symmetry group needs to be applied to obtain a regular butane molecule?
+I did find a [CIF checking website](http://checkcif.iucr.org/) online though and for this butane it produces this image:
+![[Pasted image 20230722140320.png]]
+So it looks like this is possible.
