move across obsidian content

--- a/content/20240321 Agilent 6675A.md
+++ b/content/20240321 Agilent 6675A.md
@@ -18,3 +18,23 @@ After turning on the supply it seemed happier. I changed the voltage to 6V and t
 ...That is a little unnerving. I quickly got out the thermal camera after it went pop to try and catch something red handed, but no luck. Rather than put a piece of wire back and try it all again, I instead went back to the FET board above looking for trouble. This time the pnp Q252 driving the low side FET died. Oh and by the way, the schematic is not the schematic for the board that I have. It's for a later revision of the board that uses MOSFET's rather than IGBT's. Taking the pnp transistor out I see it has failed short.
 
 ...Looking at the datasheet for the replacement transistor I got I observe that it has a transition frequency of 3MHz, whereas the originals (according to the schematic, anyway) have a transistion frequency of 80MHz. Given that they were driving the top and bottom of a half bridge, the chances of shoot through are approximately 100%.  So I've ordered a full set of replacement pnp's for 3/4 of the price of the entire power supply.
+
+## Things floating at mains
+
+The entire FET board is floating at mains. I don't know that it's supposed to do that. It certainly makes probing the board more annoying, this is what happens when I touch the ground lead of my scope to the "ground" of the FET board:
+
+![[Pasted image 20240322200918.png]]
+
+...fzzzt.
+
+This is is the mains input board of the supply:
+
+![[Pasted image 20240322201115.png]]
+
+So you can see that the system before the rectifying diode is actually at +/- 110 with respect to the chassis. There is a 10k resistor to the chassis on the FET board:
+
+![[Pasted image 20240322201542.png]]
+
+That is sits at 170C according to the thermal camera. $220^2/10e3 = 4.8W$. That seems about right for the temperature, but surely the designers of the supply did not intend for -RAIL to be floating so high, given how they tied it to ground.
+
+
