move across obsidian content

--- a/content/20240321 Agilent 6675A.md
+++ b/content/20240321 Agilent 6675A.md
@@ -37,4 +37,83 @@ So you can see that the system before the rectifying diode is actually at +/- 11
 
 That is sits at 170C according to the thermal camera. $220^2/10e3 = 4.8W$. That seems about right for the temperature, but surely the designers of the supply did not intend for -RAIL to be floating so high, given how they tied it to ground.
 
+...It turns out that the heatsink is not supposed to sit at ground at all, and that the big plasic clips that hold it in aren't just there to annoy me but in fact serve to float the whole board. The addition of a printer filament box between the heatsink and chassis drops R258's temperature admirably:
 
+![[Pasted image 20240412200658.png]]
+
+In order to be able to probe things whilst not being electrocuted I also swapped out the recified mains DC output for a bench supply output of 20V.
+## Road to success
+## Bad fmax
+The [TIP42C](https://www.onsemi.com/pdf/datasheet/tip42c-d.pdf) transistors that I purchased have a gain bandwidth product of 3MHz:
+
+![[Pasted image 20240412200101.png]]
+
+but the original [MJD45H11](https://assets.nexperia.com/documents/data-sheet/MJD45H11.pdf) transistors have a transition frequency of 80MHz:
+
+![[Pasted image 20240412200208.png]]
+
+...This would seem to be an issue. So I bought some [2SA1186](https://www.digikey.com/en/products/detail/sanken-electric-usa-inc/2SA1186/3661800) ones instead which have a transition frequency of 60MHz, which is hopefully good enough. 
+
+## More comparisons
+
+In preparation for the above transistors arriving I took all the existing ones off the board, and then started probing about to find further differences between the two sides of the circuit. I discovered that the side with the blown PNP transistor also had some bad power transistors:
+
+![[Pasted image 20240412201057.png]]
+
+And in addition to that the FET driver that originally died and that I replaced had died again, so I replaced that for a second time also. 
+
+All of this was made possible by comparing the two symmetrical sides of the circuit and comparing waveforms to help reason it out. Without that reference to look at I think this would have taken far too long to figure out and wouldn't have been worth doing.
+
+Unlike what you might expect from looking in the schematic of the manual, the supply actually has two sets of FET's in parallel:
+
+![[Pasted image 20240412201410.png]]
+
+So I took some working FET's from side B and put them on side A. In total two of the FET's of side A were completely kaput and one of them was functioning merely poorly (the waveform didn't look idential with the other side). After replacing all 3, I got a regulated output voltage! 
+The power board was being supplied with 20V and doesn't seem to want to go above 5.5V or so but I think that's OK and should be fixed when I switch back to mains. This regulated voltage was actually achieved without the pnp transistors at all:
+
+![[Pasted image 20240412202056.png]]
+
+So I guess they are just there to speed up the edges. I also think that it would be best to add them before actually drawing any load from the supply.
+
+## And now, for a very confusing graph:
+OK so it turns out what looks too good to be true is. Even though the output is being correctly regulated, there is still something clearly wrong with the FET driving still:
+![[Pasted image 20240412212612.png]]
+
+The high side gate of the side of the schematic that has components blowing up is still clearly not being driven correctly for some reason. The "high side gate(bad)" clearly shows this, it is not capable of drivin up to the same as the high side gate on the other side. Here is what the half bridge midpoint looks like:
+
+![[Pasted image 20240412212848.png]]
+
+So if you take the yellow trace in the top plot - the yellow trace in the bottom plot you get the Vgs of the top FET. and clearly the source of the FET is not floating up to any rail at the time that the high side gate goes high. So perhaps this FET is also dead and not conducting? I do have one more spare power FET, so let's try that.
+
+
+![[Pasted image 20240413114519.png]]
+
+... There we go. I suppose in retrospect it should have been surprising that 3 out of 4 FET's on a half bridge would fail. But I was fooled because some of them failed short circuit and some failed open circuit.  After replacing that last FET everything seemed fine so I put the FET board back on the mains power and nothing blew up. As far as I can tell that means that the unit is working!
+
+## Cleanup: encoder
+
+The two encoder wheels on the front had gotten banged and the knobs popped off:
+
+![[Pasted image 20240413142738.png]]
+
+Inside the encoders look like this:
+
+![[Pasted image 20240413142940.png]]
+
+![[Pasted image 20240413142954.png]]
+
+The actual wheel is a very solid piece of metal, basically looks like a motor stator. Seems kind of gratuitous to be honest, but then again the encoders survived the 7mm ABS shaft being snapped off, so what do I know?
+
+
+
+# The saga continues
+
+I just [[20240424 Plasma toroid 3 Aluminium|blew up]] the supply again. How annoying. This time it seems that both the regulator and the half bridge are dead:
+
+![[Pasted image 20240425211644.png]]
+
+I think that this is the reason the 3.3R resistor was so hot. There was a short through the failed FET driver.
+
+![[Pasted image 20240425211715.png]]
+
+I have ordered some replacement 
